--- a/package.json
+++ b/package.json
@@ -3,15 +3,13 @@
   "version": "2.0.0",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html --dist-dir public --public-url ./",
-    "deploy": "gh-pages -d public"
+    "build": "parcel build src/index.html --dist-dir public --public-url ./"
   },
   "author": "Ymmy833y",
   "dependencies": {
     "@toast-ui/editor": "^3.1.0"
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0",
     "parcel": "^2.13.3"
   }
 }
