--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@toast-ui/editor": "^3.1.0"
   },
   "devDependencies": {
-    "parcel": "^2.13.3"
+    "parcel": "^2.13.3",
+    "tailwindcss": "^3.4.16"
   }
 }
