--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "2.0.0",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html --dist-dir public --public-url ./"
+    "build": "parcel build src/index.html --dist-dir public --public-url ./",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "author": "Ymmy833y",
   "dependencies": {
     "@toast-ui/editor": "^3.1.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.21.0",
+    "eslint": "^9.21.0",
+    "globals": "^16.0.0",
     "parcel": "^2.13.3",
     "svgo": "^3.3.2",
     "tailwindcss": "^3.4.16"
