--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@parcel/packager-raw-url": "^2.13.3",
+    "@parcel/transformer-webmanifest": "^2.13.3",
     "eslint": "^9.21.0",
     "globals": "^16.0.0",
     "parcel": "^2.13.3",
+    "parcel-reporter-bundle-manifest": "^1.0.0",
     "svgo": "^3.3.2",
     "tailwindcss": "^3.4.16"
   }
