--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+  pull_request:
+    branches:
+      - release/2.0.0-alpha3 
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-24.04
