--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "author": "Ymmy833y",
   "dependencies": {
-    "@toast-ui/editor": "^3.1.0"
+    "@toast-ui/editor": "^3.1.0",
+    "@toast-ui/editor-plugin-color-syntax": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
