Add TOAST UI Editor with UML Plugin

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Ymmy833y",
   "dependencies": {
     "@toast-ui/editor": "^3.1.0",
-    "@toast-ui/editor-plugin-color-syntax": "^3.1.0"
+    "@toast-ui/editor-plugin-color-syntax": "^3.1.0",
+    "@toast-ui/editor-plugin-uml": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
