deploy: b03e682f87758a344271ee7bc095319652c08780

--- a/parcel-manifest.json
+++ b/parcel-manifest.json
@@ -1,1 +1,1 @@
-{"index.html":"./index.html","manifest.json":"./manifest.webmanifest","styles/tailwind.css":"./index.08c3276e.css","styles/base.css":"./index.1c4b3b3f.css","index.js":"./index.d434b1e9.js","sw.js":"./sw.js"}
+{"index.html":"./index.html","manifest.json":"./manifest.webmanifest","styles/tailwind.css":"./memo-app.acb1782b.css","styles/base.css":"./memo-app.d109ac69.css","index.js":"./memo-app.78be9d4c.js","sw.js":"./sw.js"}
