--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "memo-app",
-  "version": "2.0.0",
+  "version": "3.0.0 alpha1",
   "scripts": {
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html --dist-dir public --public-url ./",
@@ -9,20 +9,24 @@
   },
   "author": "Ymmy833y",
   "dependencies": {
-    "@toast-ui/editor": "^3.1.0",
+    "@toast-ui/editor": "^3.2.2",
     "@toast-ui/editor-plugin-code-syntax-highlight": "^3.1.0",
     "@toast-ui/editor-plugin-color-syntax": "^3.1.0",
-    "@toast-ui/editor-plugin-uml": "^3.0.1"
+    "@toast-ui/editor-plugin-uml": "^3.0.1",
+    "lz-string": "^1.5.0",
+    "prismjs": "^1.30.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
     "@parcel/packager-raw-url": "^2.13.3",
     "@parcel/transformer-webmanifest": "^2.13.3",
-    "eslint": "^9.21.0",
-    "globals": "^16.0.0",
+    "@types/node": "^22.13.10",
+    "@types/prismjs": "^1.26.5",
     "parcel": "^2.13.3",
     "parcel-reporter-bundle-manifest": "^1.0.0",
+    "postcss": "^8.5.3",
     "svgo": "^3.3.2",
-    "tailwindcss": "^3.4.16"
+    "tailwindcss": "^3.4.16",
+    "typescript": "^5.0.0",
+    "typescript-eslint": "^8.20.0"
   }
 }
