--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "memo-app",
-  "version": "3.0.0 alpha1",
+  "version": "3.0.0",
   "scripts": {
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html --dist-dir public --public-url ./",
